# rush-env

./: .README_副本.md  .gitignore  Cargo.toml  README_CN.md  justfile  rustfmt.toml
.github/: git-commit-instructions.md
assets/template/: rush-env.xml  rush.xml
rush/: Cargo.toml
rush-env/: .gitignore  Cargo.toml
rush-env/assets/template/: .zshenv  rush.toml  rush.xml  starship.toml  tmux.conf
rush-env/src/: cli.rs  core.rs  lib.rs  main.rs  visitor.rs
rush-env/src/cli/: dot_zshrc.rs
rush-env/src/core/: condition.rs  installer.rs  language.rs  path.rs  platform.rs  plugin.rs  proxy.rs  rush.rs  script.rs  tool.rs
rush-env/src/core/script/: alias.rs  eval.rs  export.rs  function.rs  raw.rs  source.rs  var.rs
rush-lib/: Cargo.toml
rush-lib/src/: lib.rs  platform.rs  proxy.rs  shell_script.rs
rush-say/: Cargo.toml
rush-say/src/: lib.rs  main.rs  section.rs
rush-var/: Cargo.toml  README.md
rush-var/src/: env_source.rs  lib.rs
src/: config.rs  core.rs  lib.rs  main.rs  visitor.rs
src/config/: antidote_config.rs  proxy_config.rs
src/core/: dev_tool.rs  language.rs  path.rs  plugin.rs  proxy.rs  rush.rs  script.rs  shell_script.rs  tool.rs
src/core/script/: alias.rs  eval.rs  export.rs  function.rs  raw.rs  source.rs  var.rs
src/core/shell_script/: alias_script.rs  eval_script.rs  export_script.rs  function_script.rs  raw_script.rs  source_script.rs  var_script.rs
