[workspace]
resolver = "3"

[workspace.package]
name = "rush-env"
version = "0.1.1"
edition = "2024"
description = "A modern, configuration-driven Zsh environment generator"
authors = ["BppleMan"]
license = "Apache-2.0"
repository = "https://github.com/BppleMan/rush-env"

[workspace.dependencies]
serde = { version = "1.0.219", default-features = false, features = ["derive", "std"] }
toml = { version = "0.9.0", default-features = false, features = ["parse", "serde"] }
quick-xml = { version = "0.38.0", default-features = false, features = ["async-tokio", "serialize", "serde-types"] }
thiserror = { version = "2.0.12", default-features = false }
color-eyre = { version = "0.6.5", default-features = false, features = ["default"] }
clap = { version = "4.5.41", default-features = false, features = ["std", "derive"] }
inquire = { version = "0.7.5", default-features = false, features = ["console"] }
include_dir = { version = "0.7.4", default-features = false }
tokio = { version = "1.46.1", default-features = false, features = ["macros", "rt-multi-thread"] }

[package]
name = "rush-env"
version.workspace = true
edition.workspace = true
description.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
default-run = "rush"

[[bin]]
name = "rush"
path = "src/main.rs"

[dependencies]
serde.workspace = true
quick-xml.workspace = true
tokio.workspace = true
thiserror.workspace = true
color-eyre.workspace = true
