[workspace]
resolver = "3"
members = ["rush-env", "rush-say", "rush-var"]

[workspace.package]
name = "rush-env"
version = "0.1.1"
edition = "2024"
description = "A modern, configuration-driven Zsh environment generator"
authors = ["BppleMan"]
license = "Apache-2.0"
repository = "https://github.com/BppleMan/rush-env"

[workspace.dependencies]
serde = { version = "1.0.219", default-features = false, features = ["derive", "std"] }
toml = { version = "0.9.2", default-features = false, features = ["parse", "serde"] }
quick-xml = { version = "0.38.0", default-features = false, features = ["async-tokio", "serialize", "serde-types"] }
thiserror = { version = "2.0.12", default-features = false }
color-eyre = { version = "0.6.5", default-features = false, features = ["default"] }
clap = { version = "4.5.41", default-features = false, features = ["std", "derive"] }
inquire = { version = "0.7.5", default-features = false, features = ["console"] }
include_dir = { version = "0.7.4", default-features = false }
tokio = { version = "1.46.1", default-features = false, features = ["macros", "rt-multi-thread"] }
derive_more = { version = "2.0.1", default-features = false, features = ["as_ref", "deref", "deref_mut"] }
which = { version = "8.0.0" }
tracing = { version = "0.1.41", default-features = false, features = ["attributes"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-appender = { version = "0.2.3", default-features = false }
